# Design-Patterns

./: README.md
Singleton/: CMakeLists.txt  Main.cpp  Singleton.cpp  Singleton.hpp
